<resources>
	<string name="app_name">Daily Baby Tracker</string>
	<string name="title_activity_welcome">Home Screen</string>
	<string name="next">NEXT</string>
	<string name="skip">SKIP</string>
	<string name="start">GOT IT</string>
	
	<string name="slide_1_title">Wellcome</string>
	<string name="slide_1_desc">In Your Daily Baby Tracker
		you will find useful and practical tips for raising child.
		Your baby’s day at your fingertips!</string>
	
	<string name="slide_2_title">Personalize the schedule</string>
	<string name="slide_2_desc">The baby tracking app for moms which will help you
		personalize relevant information according to your baby’s daily schedule.</string>
	
	<string name="slide_3_title">Feeding, Breastfeeding!</string>
	<string name="slide_3_desc">The app is an excellent way to keep a log of your baby’s
		breastfeeding, feeding schedule</string>
	
	<string name="slide_4_title">Activities</string>
	<string name="slide_4_desc">The app will help you to track most of your newborn’s
		daily things, feeding times, sleep hours, nap times and more.</string>
	
	<string name="play_again_desc">To see the welcome slider again,
		goto Settings -> apps -> welcome slider -> clear data</string>
	<string name="play_again">Play Again</string>
	
	
	<!-- TODO: Remove or change this placeholder text -->
	<string name="dbt_app_name">Daily Baby Tracker</string>
	
	<!--  Login / Register  -->
	<string name="dbt_hint_username">Email </string>
	<string name="dbt_hint_password">Password</string>
	<string name="change_language">Change Language</string>
	
	<string name="dbt_hint_name">Name</string>
	<string name="dbt_hint_confirm_password">Confirm Password</string>
	<string name="bdp_button_register">Register</string>
	
	<string name="error_message_name">Enter Full Name</string>
	<string name="error_message_email">Enter Valid Email</string>
	
	<string name="error_message_age">Enter Age</string>
	<string name="error_message_password">Enter Password</string>
	<string name="success_message">Registration Successful</string>
	<string name="text_not_member">No account yet? Create one</string>
	<string name="text_already_member">Already a member? Login</string>
	<string name="error_email_exists">Email Already Exists</string>
	<string name="error_password_match">Password Does Not Matches</string>
	<string name="error_valid_email_password">Wrong Email or Password</string>
	
	
	<string name="bdp_button_next">Next</string>
	<string name="bdp_button_cancel">Cancel</string>
	<string name="bdp_error_password">Password must contain at least 8 characters.</string>
	<string name="bdp_filter_title">Filter</string>
	<string name="bdp_search_title">Search</string>
	<string name="bdp_product_title">Title</string>
	<string name="bdp_product_description">Secondary text</string>
	
	<!--  backdrop menu labels -->
	<string name="bdp_feeding_label">Feeding</string>
	<string name="bdp_sleeping_label">Sleeping</string>
	<string name="bdp_diapers_label">Diapering</string>
	<string name="bdp_leisure_label">Leisure</string>
	<string name="bdp_growth_label">Growth</string>
	<string name="bdp_pumping_label">Pumping</string>
	<string name="bdp_health_label">Health</string>
	<string name="bdp_account_label">My Account</string>
	
	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
	<string name="title_activity_settings">Settings</string>
	
	<!-- Preference Titles -->
	<string name="messages_header">Messages</string>
	<string name="sync_header">Sync</string>
	
	<!-- Messages Preferences -->
	<string name="signature_title">Your signature</string>
	<string name="reply_title">Default reply action</string>
	
	<!-- Sync Preferences -->
	<string name="sync_title">Sync email periodically</string>
	<string name="attachment_title">Download incoming attachments</string>
	<string name="attachment_summary_on">Automatically download attachments for incoming emails
	</string>
	<string name="attachment_summary_off">Only download attachments when manually requested</string>
	<string name="bdp_settings_title">Settings</string>
	<string name="search">Search</string>
	<string name="table_for_nutritions">Table for nutritions</string>
	
	<string name="messages_header1">Messages</string>
	<string name="title">Title</string>
	<string name="recipeId">Recipes Id</string>
	<string name="bdp_home_label">Home</string>
	<string name="sleeping_schedule_notes">Sleeping schedule notes</string>
	<string name="about_sleeping_schedule">Keep in mind that newborn schedules are generally much more variable than older children’s schedules.
		A baby doesn’t really get on a clock-based schedule until 6 months old, on average,
		though some are naturally more predictable than others.Some older babies and toddlers can struggle with schedules that are too rigid to the clock,
		so you will want to use what you know best about your own baby or toddler to adjust your schedule to fit his or her personality and temperament.
		Fot that take a notes, to help you to personalize the sleeping schedules.
	</string>
	<string name="your_baby_s_growth_first_12_months">Your baby’s growth – first 12 months</string>
	<string name="your_baby_s_growth">Your baby’s growth</string>
	
	<string name="growth_1st_mont">Infant development begins at at birth and they grow fast and learn a lot.
		At 1 month, cuddling, sleeping and feeding are all that really matters to your baby.
		The time you spend with them will help their brain to grow and develop as they start to experience the world.</string>
	<string name="growth_2nd_mont">Your 2-month-old is growing fast and becoming more alert.
		They will be making more sounds and getting more skilled at moving their body.
		They will still be crying a lot - but you’ve probably already seen that magic first smile (usually at 6 weeks) which somehow makes all the hard work worthwhile.</string>
	<string name="growth_3th_mont">By 3 months, your baby will have formed a strong attachment to you.
		They will respond to you with lots of smiles, and might even talk back to you in their own way.
		The worst of the crying should be nearly over, and you can really enjoy your baby as they grow into their own little person.</string>
	<string name="growth_4th_mont">From 4 months, your baby will quickly be learning to coordinate their body.
		They will have more control over what they do, their vision, touch and hearing will be much more developed, and they will start to move around much more.
		They can communicate much better too, and the number of hours for which they cry should have settled by now.</string>
	<string name="growth_5th_mont">Your baby will be growing and developing rapidly now.
		They are learning more about the world and how they fit into it. Many of the new things your baby is learning at 5 months are preparing them for eating solid food.
		It is usually recommended you introduce solids at 6 months, but some babies are ready as early as 4 months.
		So, if you think it’s time, it’s fine to start experimenting with solids now.</string>
	<string name="growth_6th_mont">Six months is an exciting time and your baby will now be developing very fast.
		The left side of their brain will have has started communicating with the right side, meaning they can coordinate their body better.
		You will be understanding your baby much better now as they let you know whether they’re happy or sad and start to respond to words</string>
	<string name="growth_7th_mont">Your baby is now growing up fast.
		They may well be sitting on their own, eating solid foods - although breastmilk or formula will still be their main source of nutrition - and understanding more about what you want from them.
		It’s an exciting time to watch them grow</string>
	<string name="growth_8th_mont">Your 8-month-old is probably getting into everything and moving around a lot as they explore the world.
		This means more work for you, but it’s wonderful to watch their fascination grow.</string>
	<string name="growth_9th_mont">At around 9 months, babies’ brains have a growth spurt.
		They will really be developing a personality now, and you’ll be getting a glimpse of the child they’re going to grow into.</string>
	<string name="growth_10th_mont">Your 10-month-old will now be very active.
		You’ll probably be chasing around after them as they crawl and pull themselves up onto furniture, and you’ll be learning more about your baby’s developing personality.</string>
	<string name="growth_11th_mont">At 11 months old, your baby will be almost a toddler, and they will be maturing fast.
		You’ll probably be surprised how quickly they can move around your home and how independent they are becoming.</string>
	<string name="growth_12th_mont">At 12 months, your baby is officially a toddler.
		If they haven’t already, it won’t be long now before they take their first steps, develop a sense of humour, and tell you they love you.</string>
	<string name="logOutButton">logout</string>
	<string name="bdp_button_save">Save</string>
	<string name="delete">Delete</string>
	<string name="time">Time</string>
	<string name="note">Note</string>
	<string name="enter_your_note_here">Add note</string>
	<string name="bdp_button_login">Login</string>
	<string name="feeding_schedule_notes">Feeding Schedule Notes</string>
	


</resources>
