<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

<!--	TODO: Proveri dali treba da gi vratis vo materialButton-->
	
	<Button
		android:id="@+id/homeButton"
		style="@style/Widget.Shrine.Button.TextButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize= "15dp"
		android:text="@string/bdp_home_label" />
	
	
	<Button
		android:id="@+id/feedingButton"
		style="@style/Widget.Shrine.Button.TextButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize= "15dp"
		android:text="@string/bdp_feeding_label" />
	
	<Button
		android:id="@+id/sleepingButton"
		style="@style/Widget.Shrine.Button.TextButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize= "15dp"
		android:text="@string/bdp_sleeping_label" />
	
	
	<Button
		android:id="@+id/growthButton"
		style="@style/Widget.Shrine.Button.TextButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="15dp"
		android:text="@string/bdp_growth_label" />
	
	
	<Button
		android:id="@+id/leisureButton"
		style="@style/Widget.Shrine.Button.TextButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize= "15dp"
		android:text="@string/bdp_leisure_label" />
	
	
	<View
		android:layout_width="56dp"
		android:layout_height="1dp"
		android:layout_margin="16dp"
		android:background="@color/colorPrimary" />
	
	<Button
		style="@style/Widget.Shrine.Button.TextButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize= "15dp"
		android:text="@string/bdp_account_label" />
	
	<Button
		style="@style/Widget.Shrine.Button.TextButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="15dp"
		android:text="Settings" />

</merge>