<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_gravity="center"
	android:background="@drawable/bg_round"
	android:layout_margin="5dp"
	android:layout_height="wrap_content">
	
	<LinearLayout
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="4"
		android:orientation="vertical">
		
		<TextView
			android:id="@+id/tvNote"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/note"
			android:textSize="15sp" />
		
		<TextView
			android:id="@+id/tvTimeStamp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:hint="@string/time"
			android:textSize="15sp" />
	
	</LinearLayout>
	
	<ImageButton
		android:src="@drawable/btn_delete"
		android:id="@+id/btnDelete"
		android:background="@color/colorPrimaryDark"
		android:layout_width="0dp"
		android:layout_margin="1dp"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_weight="1"
		android:text="@string/delete" />

</LinearLayout>