<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/loginPageBackgroundColor"
	>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:clipChildren="false"
		android:clipToPadding="false"
		android:orientation="vertical"
		android:padding="24dp"
		android:paddingTop="16dp">
		
		<ImageView
			android:layout_width="64dp"
			android:layout_height="74dp"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="48dp"
			android:layout_marginBottom="16dp"
			android:src="@drawable/ic_portrait_black_24dp" />
		
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginBottom="132dp"
			android:text="@string/dbt_app_name"
			android:textAppearance="@color/colorPrimaryDark"
			android:textSize="30sp" />
		
		
		<com.google.android.material.textfield.TextInputLayout
			style="@style/Widget.Shrine.TextInputLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/dbt_hint_username">
			
			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/email_edit_text"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="text"
				android:maxLines="1">
			
			</com.google.android.material.textfield.TextInputEditText>
		
		</com.google.android.material.textfield.TextInputLayout>
		
		<com.google.android.material.textfield.TextInputLayout
			style="@style/Widget.Shrine.TextInputLayout"
			android:id="@+id/password_text_input"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="4dp"
			android:hint="@string/dbt_hint_password"
			app:errorEnabled="true"
			app:counterEnabled="true"
			app:counterMaxLength="8"
			app:passwordToggleEnabled ="true">
			
			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/password_edit_text"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="textPassword"
				>
			
			</com.google.android.material.textfield.TextInputEditText>
		
		</com.google.android.material.textfield.TextInputLayout>
		
		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			
			<com.google.android.material.button.MaterialButton
				android:id="@+id/login_button"
				style="@style/Widget.Shrine.Button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentEnd="true"
				android:layout_alignParentRight="true"
				android:textColor="@color/colorPrimary"
				android:text="@string/bdp_button_login"/>
			
			<com.google.android.material.button.MaterialButton
				android:id="@+id/cancel_button"
				style="@style/Widget.Shrine.Button.TextButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginRight="12dp"
				android:layout_marginEnd="12dp"
				android:layout_toStartOf="@id/login_button"
				android:layout_toLeftOf="@id/login_button"
				android:textColor="@color/colorPrimary"
				android:text="@string/bdp_button_cancel"/>
			
		</RelativeLayout>
		
		<TextView
			android:id="@+id/tv_signUp"
			android:gravity="center"
			android:layout_marginTop="10dp"
			android:textSize="16dp"
			android:textColor="@color/colorPrimary"
			android:text="No account yet? Create One"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />
		
	</LinearLayout>
</ScrollView>